@@ -1,12 +1,12 @@
 name    = Config-Model-OpenSsh
-version = 1.214
+version = 1.215
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
 copyright_year = 2011
 
 [Prereqs / RuntimeRequires]
-Config::Model    = 1.234
+Config::Model    = 1.236
 Log::Log4perl    = 1.11 
 
 [Prereqs / RuntimeRecommends]
@@ -30,13 +30,7 @@ remove = Readme
 [Prepender]
 copyright=1
 
-[PodSpellingTests]
-stopwords = cpan
-stopwords = debian
-stopwords = dpkg
-stopwords = Dumont
-stopwords = ddumont
-stopwords = openssh
-stopwords = ssh
-stopwords = augeas
-stopwords = sshd
+[Run::BeforeBuild]
+run = /usr/bin/config-edit -model Ssh -model_dir lib/Config/Model/models -gen_pod lib
+run = /usr/bin/config-edit -model Sshd -model_dir lib/Config/Model/models -gen_pod lib
+
