@@ -1,6 +1,9 @@
 [
   {
-    'class_description' => 'Model of /etc/ssh/ssh_config or ~/.ssh/config',
+    'class_description' => 'Configuration class used by L<Config::Model> to edit or 
+validate /etc/ssh/ssh_config (when run as root)
+or ~/.ssh/config (when run as a regular user).
+',
     'include_after' => 'Host',
     'name' => 'Ssh',
     'include' => [
